Spacing and logic fixes

--- a/src/frontend/src/style.css
+++ b/src/frontend/src/style.css
@@ -449,6 +449,8 @@ span.replaceHighlight {
 }
 
 .Survey {
+  max-width: 600px;
+  margin-left: auto; margin-right: auto;
   margin-bottom: 20px;
 }
 
